# Sooters-ERP

./: .gitignore  Cargo.toml  Create Database.sql  config - example.json  create_release.ps1  package.json  rollup.config.js  tsconfig.json
css/: main.css
js/: ajax.js  create_customer.js  create_employee.js  create_order.js  customer.js  customer_orders.js  customers.js  employee.js  employees.js  index.js  order.js  phone.js  preferences.js  recent.js
src/: cache.rs  config.rs  database.rs  image_cache.rs  main.rs  state.rs  util.rs
src/model/: customer.rs  employee.rs  location.rs  mod.rs  order.rs
src/model/order_types/: film.rs  framing.rs  mod.rs  photoshoots.rs
src/routes/: catchers.rs  css.rs  customers.rs  employees.rs  error.rs  images.rs  index.rs  js.rs  locations.rs  mod.rs  orders.rs  report.rs
src/routes/customers/: all.rs  create.rs  mod.rs  notes.rs  one.rs
src/routes/data/: customers.rs  employees.rs  locations.rs  mod.rs  orders.rs  util.rs
src/state/: database.rs  error.rs  mod.rs
templates/: base.html  create_customer.html  create_employee.html  create_order.html  customer.html  customer_orders.html  customers.html  employee.html  employees.html  index.html  order.html  recent.html  report.html
ts/: create_customer.ts  create_employee.ts  create_order.ts  customer.ts  customer_orders.ts  customers.ts  employee.ts  employees.ts  index.ts  logging.ts  order.ts  preferences.ts  recent.ts  report.ts
ts/framework/: ajax.ts  error.ts  index.ts
ts/model/: customer.ts  employee.ts  index.ts  location.ts  order.ts
(+92 files in other folders)
